[package]
name = "oxideav-openexr"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-openexr"
homepage = "https://github.com/OxideAV/oxideav-openexr"
authors = ["Mark Karpeles"]
description = "Pure-Rust OpenEXR (HDR scanline) reader/writer for oxideav — clean-room from the openexr.com file format spec"
readme = "README.md"
keywords = ["multimedia", "image", "openexr", "hdr", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-openexr` with
# `default-features = false` and skip the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `parse_exr` / `encode_exr_scanline_rgba_float` API plus crate-local
# `ExrImage` / `ExrError` types and never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm. Gated behind the
# default-on `registry` feature alongside `oxideav-core` so the
# standalone build path stays decoupled.
linkme = { version = "0.3", optional = true }

# zlib reader/writer for ZIP_COMPRESSION (compression == 3, 16
# scanlines per block). Pure-Rust `miniz_oxide` backend matches the
# `oxideav-pdf` flate2 setup so workspace builds don't pull native zlib.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder trait implementations against
# `oxideav-core` so the crate can plug into the `oxideav` framework
# registry. Default-on; turn off for image-library use-cases that just
# want the standalone `parse_exr` / `encode_exr_scanline_rgba_float`
# API.
registry = ["dep:oxideav-core", "dep:linkme"]
